# Software-Engineering-eingebetteter-Systeme

./: README.md
ha1/: TestEssentials.sctunit  smartfarm.ysc
template/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ha2
template/Testing/Temporary/: CTestCostData.txt
template/src/: Bewaesserungssystem.h  Duengungssystem.h  Klimasteuerung.h  Lampe.h  Pflanzenschutzsystem.h  TestBench.cpp  TestBench.h  TestHelper.cpp  TestHelper.h  main.cpp
